[minor] Cleanup